// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div>
    <h2
      className={
        Object {
          "data-css-16pm9zd": "",
        }
      }
    >
      CONTACT FORM
    </h2>
    <div
      className={
        Object {
          "data-css-1w0rge6": "",
        }
      }
    >
      (will not be shared with public; leave blank to submit anonymously)
    </div>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        First Name 
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        value=""
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Last Name 
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        value=""
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Email
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="email"
        value=""
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Phone
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        type="tel"
        value=""
      />
    </label>
  </div>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`filled request 1`] = `
<div>
  <div>
    <h2
      className={
        Object {
          "data-css-16pm9zd": "",
        }
      }
    >
      CONTACT FORM
    </h2>
    <div
      className={
        Object {
          "data-css-1w0rge6": "",
        }
      }
    >
      (will not be shared with public; leave blank to submit anonymously)
    </div>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        First Name 
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        value="Carol"
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Last Name 
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        value="Danvers"
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Email
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="email"
        value="marvel@alphaflight.gov"
      />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }
    >
      <span>
        Phone
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        type="tel"
        value="6175551234"
      />
    </label>
  </div>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;
